<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/main_color"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/IvLogo"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/action_reset_password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IvLogo" />

    <EditText
        android:id="@+id/EtResetPasswordEmail"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="#FCF5FD"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TvResetPassword" />

    <ImageView
        android:id="@+id/IvEmail"
        android:layout_width="40dp"
        android:layout_height="49dp"
        android:layout_marginStart="48dp"
        android:src="@drawable/ic_email"
        app:layout_constraintEnd_toStartOf="@+id/EtResetPasswordEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EtResetPasswordEmail" />

    <Button
        android:id="@+id/BtnResetPasswordConfirm"
        android:layout_width="134dp"
        android:layout_height="58dp"
        android:layout_marginTop="120dp"
        android:text="@string/button_confirm"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtResetPasswordEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>